<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSubjectFragment"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/subjectNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subject_name_hint"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subject_name"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/teacherNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/teacher_name_hint"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/teacher_name"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/subjectDescriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subject_description_hint"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subject_description"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/subjectColourView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject_colour_label"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="8dp" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/subject_colour" />
    </androidx.cardview.widget.CardView>
</LinearLayout>