<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudyFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studyTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/study_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:textSize="18sp"
            android:layout_marginStart="12dp" />

        <Spinner
            android:id="@+id/subjectInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:entries="@array/subjects"
            android:spinnerMode="dialog"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_label"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="44dp"/>

        <Spinner
            android:id="@+id/dayInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/days"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studyTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_label"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_label"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="24dp"
        android:layout_marginLeft="-16dp"
        android:layout_marginRight="-16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/reminder_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_before_reminder_label"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="38dp"/>

        <Spinner
            android:id="@+id/reminderTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/times"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/save_study_button_label"
            android:textColor="@color/white"
            android:background="?android:attr/colorSecondary"
            android:padding="16dp"/>
    </RelativeLayout>
</LinearLayout>